[project]
name = "gridmind-sentinel"
version = "0.1.0"
description = "Multi-agent AI system for power grid fault detection, RAG-based remediation, and safety-governed incident management."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
